--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "sass": "^1.57.1",
     "save": "^2.9.0",
     "styled-components": "^5.3.6",
